--- a/src/home/components/home.css
+++ b/src/home/components/home.css
@@ -1,14 +1,14 @@
-.folders{
-  width: 30%;
-  float: left;
-}
-.notes{
-  width:70%;
-  float: right;
-}
+/*.folders{*/
+  /*width: 30%;*/
+  /*float: left;*/
+/*}*/
+/*.notes{*/
+  /*width:70%;*/
+  /*float: right;*/
+/*}*/
 
-.clearfix::after {
-  content: "";
-  display: table;
-  clear: both;
-}
+/*.clearfix::after {*/
+  /*content: "";*/
+  /*display: table;*/
+  /*clear: both;*/
+/*}*/
