--- a/src/__app__/app.css
+++ b/src/__app__/app.css
@@ -1,6 +1,16 @@
 html { font-family: 'Roboto', sans-serif; }
 
+html,body{
+  height:100%;
+}
+
 body {
   margin: 0;
   padding: 0;
+}
+
+#root{
+  /*activate this only if the height of any block is more than window height*/
+  /*min-height: 100%;*/
+  height: 100%;
 }
